state/basic/conf/git.iptables.conf
# Generated by iptables-save v1.4.14 on Tue Jun 23 17:17:33 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37:4486]
-A INPUT -s 101.200.180.246/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 119.57.173.131/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 123.57.226.204/32 -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 119.57.173.131/32 -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 101.200.180.246/32 -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 123.57.226.204/32 -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 119.57.173.131/32 -i eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 101.200.180.246/32 -i eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 123.57.226.204/32 -i eth1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eth1 -p tcp -m state --state INVALID,NEW -j DROP
-A INPUT -i eth1 -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT
-A INPUT -i eth1 -p udp -j DROP
-A INPUT -i eth1 -p icmp -j DROP
-A INPUT -i eth1 -j DROP
-A OUTPUT -o eth1 -p udp -j DROP
-A OUTPUT -o eth1 -p icmp -j DROP
COMMIT
# Completed on Tue Jun 23 17:17:33 2015
